--- a/package.json
+++ b/package.json
@@ -10,18 +10,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "cheerio": "1.0.0-rc.12",
     "firebase": "^10.8.0",
     "lucide-react": "^0.344.0",
+    "node-html-parser": "^6.1.12",
+    "nuqs": "^2.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-helmet": "^6.1.0",
-    "@types/react-helmet": "^6.1.11",
+    "react-helmet-async": "^2.0.4",
     "react-router-dom": "^6.22.3",
-    "zustand": "^4.5.2",
-    "cheerio": "1.0.0-rc.12",
-    "node-html-parser": "^6.1.12",
     "tesseract.js": "^5.0.5",
-    "url-regex-safe": "^4.0.0"
+    "url-regex-safe": "^4.0.0",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.64",
@@ -36,6 +36,6 @@
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.2.2",
-    "vite": "^6.0.1"
+    "vite": "^5.1.6"
   }
 }
