--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-router": "^1.85.0",
     "cheerio": "1.0.0-rc.12",
     "firebase": "^10.8.0",
     "lucide-react": "^0.344.0",
