--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@remix-run/router": "1.15.0-pre.0",
     "@tanstack/react-router": "^1.85.0",
     "cheerio": "1.0.0-rc.12",
     "firebase": "^10.8.0",
@@ -19,7 +20,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^2.0.4",
-    "react-router-dom": "^6.22.3",
+    "react-hot-toast": "^2.4.1",
+    "react-router": "6.22.0-pre.0",
+    "react-router-dom": "6.22.0-pre.0",
     "tesseract.js": "^5.0.5",
     "url-regex-safe": "^4.0.0",
     "zustand": "^4.5.2"
