--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-router-dom": "6.22.0-pre.0",
     "tesseract.js": "^5.0.5",
     "url-regex-safe": "^4.0.0",
+    "uuid": "^11.0.3",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
